--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/jspdf": "^2.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.24",
     "@types/xlsx": "^0.0.36",
     "jest": "^29.5.0",
