--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/animations": "^19.2.11",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -30,7 +30,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-   
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^4.17.21",
