--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^4.17.21",
